--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  flutter_screenutil: ^2.3.0
 
-  english_words: ^3.1.5
+  flutter_swiper: ^1.1.6
+
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +49,20 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - images/loading.gif
+    - images/logo.png
+    - images/man-painting.png
+    - images/map-marker-blue.png
+    - images/map-marker-pink.png
+    - images/paint.png
+    - images/ph-location.png
+    - images/ph-photos.png
+    - images/splash1.png
+    - images/splash2.png
+    - images/splash3.png
+    - images/wallpaper.png
+    - images/woman-with-phone.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -75,3 +89,83 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato-Hairline.ttf
+          weight: 100
+        - asset: fonts/Lato-HairlineItalic.ttf
+          weight: 100
+          style: italic
+        - asset: fonts/Lato-Thin.ttf
+          weight: 200
+        - asset: fonts/Lato-ThinItalic.ttf
+          weight: 200
+          style: italic
+        - asset: fonts/Lato-Light.ttf
+          weight: 300
+        - asset: fonts/Lato-LightItalic.ttf
+          weight: 300
+          style: italic
+        - asset: fonts/Lato-Regular.ttf
+          weight: 400
+        - asset: fonts/Lato-Italic.ttf
+          weight: 400
+          style: italic
+        - asset: fonts/Lato-Medium.ttf
+          weight: 500
+        - asset: fonts/Lato-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: fonts/Lato-Semibold.ttf
+          weight: 600
+        - asset: fonts/Lato-SemiboldItalic.ttf
+          weight: 600
+          style: italic
+        - asset: fonts/Lato-Bold.ttf
+          weight: 700
+        - asset: fonts/Lato-BoldItalic.ttf
+          weight: 700
+          style: italic
+        - asset: fonts/Lato-Black.ttf
+          weight: 800
+        - asset: fonts/Lato-BlackItalic.ttf
+          weight: 800
+          style: italic
+        - asset: fonts/Lato-Heavy.ttf
+          weight: 900
+        - asset: fonts/Lato-HeavyItalic.ttf
+          weight: 900
+          style: italic
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Thin.ttf
+          weight: 200
+        - asset: fonts/Roboto-ThinItalic.ttf
+          weight: 200
+          style: italic
+        - asset: fonts/Roboto-Light.ttf
+          weight: 300
+        - asset: fonts/Roboto-LightItalic.ttf
+          weight: 300
+          style: italic
+        - asset: fonts/Roboto-Regular.ttf
+          weight: 400
+        - asset: fonts/Roboto-Italic.ttf
+          weight: 400
+          style: italic
+        - asset: fonts/Roboto-Medium.ttf
+          weight: 500
+        - asset: fonts/Roboto-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: fonts/Roboto-Bold.ttf
+          weight: 700
+        - asset: fonts/Roboto-BoldItalic.ttf
+          weight: 700
+          style: italic
+        - asset: fonts/Roboto-Black.ttf
+          weight: 800
+        - asset: fonts/Roboto-BlackItalic.ttf
+          weight: 800
+          style: italic
