--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
 
   flutter_screenutil: ^2.3.0
 
+  flutter_statusbarcolor: ^0.2.3
+
   flutter_swiper: ^1.1.6
 
   font_awesome_flutter: ^8.8.1
